refactor(core): 重构配置加载和图定义解析
- 移除 AppConfig 中的 getProperty 方法，不再支持通用属性访问
- 新增 GraphLoader 类用于解析 GraphDefinition- 更新 App 和 Engine 初始化逻辑，使用新的图定义加载方式
- 优化 StartGraphCommandHandler 中的图定义解析流程
-调整 EngineEnvImpl，移除对 properties 的直接操作